--- a/p8105_hw6_az2587.md
+++ b/p8105_hw6_az2587.md
@@ -90,9 +90,16 @@ purrr::map(birthweight, ~sum(is.na(.)))
     ## $wtgain
     ## [1] 0
 
-Fan, Cuifang et al. “Paternal factors to the offspring birth weight: the
-829 birth cohort study.” International journal of clinical and
-experimental medicine vol. 8,7 11370-8. 15 Jul. 2015
+There are no missing data in this dataset.
+
+Based on the two papers related to child’s birthweight, I selected
+family income, gestational age, mother’s pre-pregnancy BMI, previous
+number of low birth weight babies, and number of prior small for
+gestational age babies as regression variables.
+
+**Papers** Fan, Cuifang et al. “Paternal factors to the offspring birth
+weight: the 829 birth cohort study.” International journal of clinical
+and experimental medicine vol. 8,7 11370-8. 15 Jul. 2015
 
 Singh, G et al. “Maternal Factors for Low Birth Weight Babies.” Medical
 journal, Armed Forces India vol. 65,1 (2009): 10-2.
@@ -126,7 +133,7 @@ model_3 = lm(bwt ~ bhead + blength + babysex +
                bhead * blength * babysex, data = birthweight)
 ```
 
-cv to compare
+Use cross validation to compare:
 
 ``` r
 cv_df = crossv_mc(birthweight, 100) %>% 
@@ -154,6 +161,9 @@ cv_df %>%
 ```
 
 <img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
+
+The third model has the smallest value of RMSE while the model I
+proposed has the largest. (Sadly my model is the least optimal one)
 
 ## Problem 2
 
@@ -204,9 +214,11 @@ boot_strap_results =
   unnest(results)
 ```
 
-R^2
+### r-squared:
 
 ``` r
+r2_CI = quantile(boot_strap_results$adj.r.squared, prob = c(0.025, 0.975))
+
 boot_strap_results %>%
   ggplot(aes(x = adj.r.squared)) +
   geom_density() +
@@ -218,7 +230,12 @@ boot_strap_results %>%
 ```
 
 <img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
-CI:
+
+The distribution of R-squared approximately follows a normal
+distribution, with a center around 0.91. The 95% confidence interval for
+r-squared distribution is 0.8933721, 0.9274341.
+
+### Confidence Interval:
 
 ``` r
 boot_strap_results_2 = 
@@ -234,7 +251,9 @@ boot_strap_results_2 =
   unnest(cols = c(`(Intercept)`, tmin)) %>% 
   rename(B_0 = "(Intercept)",
          B_1 = tmin) %>% 
-  mutate(log = B_0 * B_1)
+  mutate(log = log(B_0 * B_1))
+
+log_CI = quantile(boot_strap_results_2$log, prob = c(0.025, 0.975))
 
 boot_strap_results_2 %>% 
   ggplot(aes(x = log)) +
@@ -242,3 +261,7 @@ boot_strap_results_2 %>%
 ```
 
 <img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
+
+The log function plot generally follows a normal distribution, with a
+center around 2.02. The confidence interval of the log function is
+1.9650804, 2.0589998.
