--- a/p8105_hw6_az2587.Rmd
+++ b/p8105_hw6_az2587.Rmd
@@ -41,6 +41,11 @@ birthweight = read_csv("birthweight.csv") %>%
 purrr::map(birthweight, ~sum(is.na(.)))
 ```
 
+There are no missing data in this dataset. 
+
+Based on the two papers related to child's birthweight, I selected family income, gestational age, mother's pre-pregnancy BMI, previous number of low birth weight babies, and number of prior small for gestational age babies as regression variables.
+
+**Papers**
 Fan, Cuifang et al. “Paternal factors to the offspring birth weight: the 829 birth cohort study.” International journal of clinical and experimental medicine vol. 8,7 11370-8. 15 Jul. 2015
 
 Singh, G et al. “Maternal Factors for Low Birth Weight Babies.” Medical journal, Armed Forces India vol. 65,1 (2009): 10-2. doi:10.1016/S0377-1237(09)80045-2
@@ -63,7 +68,7 @@ model_3 = lm(bwt ~ bhead + blength + babysex +
                bhead * blength * babysex, data = birthweight)
 ```
 
-cv to compare
+Use cross validation to compare:
 
 ```{r, warning=FALSE}
 cv_df = crossv_mc(birthweight, 100) %>% 
@@ -89,6 +94,8 @@ cv_df %>%
   mutate(model = fct_inorder(model)) %>% 
   ggplot(aes(x = model, y = rmse)) + geom_boxplot()
 ```
+
+The third model has the smallest value of RMSE while the model I proposed has the largest. (Sadly my model is the least optimal one)
 
 ## Problem 2
 
@@ -127,9 +134,11 @@ boot_strap_results =
   unnest(results)
 ```
 
-R^2
+### r-squared:
 
 ```{r}
+r2_CI = quantile(boot_strap_results$adj.r.squared, prob = c(0.025, 0.975))
+
 boot_strap_results %>%
   ggplot(aes(x = adj.r.squared)) +
   geom_density() +
@@ -139,7 +148,10 @@ boot_strap_results %>%
     ) +
   theme(plot.title = element_text(hjust = 0.5))
 ```
-CI: 
+
+The distribution of R-squared approximately follows a normal distribution, with a center around 0.91. The 95% confidence interval for r-squared distribution is `r r2_CI`.
+
+### Confidence Interval: 
 
 ```{r, warning=FALSE}
 boot_strap_results_2 = 
@@ -155,11 +167,17 @@ boot_strap_results_2 =
   unnest(cols = c(`(Intercept)`, tmin)) %>% 
   rename(B_0 = "(Intercept)",
          B_1 = tmin) %>% 
-  mutate(log = B_0 * B_1)
+  mutate(log = log(B_0 * B_1))
+
+log_CI = quantile(boot_strap_results_2$log, prob = c(0.025, 0.975))
 
 boot_strap_results_2 %>% 
   ggplot(aes(x = log)) +
   geom_density()
 ```
+
+The log function plot generally follows a normal distribution, with a center around 2.02.
+The confidence interval of the log function is `r log_CI`.
+
 
 
