--- a/p8105_hw6_az2587.md
+++ b/p8105_hw6_az2587.md
@@ -90,23 +90,173 @@ purrr::map(birthweight, ~sum(is.na(.)))
     ## $wtgain
     ## [1] 0
 
-There are no missing data in this dataset.
-
-Based on the two papers related to child’s birthweight, I selected
-family income, gestational age, mother’s pre-pregnancy BMI, previous
-number of low birth weight babies, and number of prior small for
-gestational age babies as regression variables.
-
-**Papers** Fan, Cuifang et al. “Paternal factors to the offspring birth
-weight: the 829 birth cohort study.” International journal of clinical
-and experimental medicine vol. 8,7 11370-8. 15 Jul. 2015
-
-Singh, G et al. “Maternal Factors for Low Birth Weight Babies.” Medical
-journal, Armed Forces India vol. 65,1 (2009): 10-2.
-<doi:10.1016/S0377-1237(09)80045-2>
+Then I apply backward selection to identify regression variables:
 
 ``` r
-model_1 = lm(bwt ~ fincome + gaweeks + ppbmi + pnumlbw + pnumsga, data = birthweight)
+mult.fit = lm(bwt ~ ., data = birthweight)
+step(mult.fit, direction='backward')
+```
+
+    ## Start:  AIC=48717.83
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     pnumlbw + pnumsga + ppbmi + ppwt + smoken + wtgain
+    ## 
+    ## 
+    ## Step:  AIC=48717.83
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     pnumlbw + pnumsga + ppbmi + ppwt + smoken
+    ## 
+    ## 
+    ## Step:  AIC=48717.83
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     pnumlbw + ppbmi + ppwt + smoken
+    ## 
+    ## 
+    ## Step:  AIC=48717.83
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     ppbmi + ppwt + smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - frace     4    124365 320848704 48712
+    ## - malform   1      1419 320725757 48716
+    ## - ppbmi     1      6346 320730684 48716
+    ## - momage    1     28661 320752999 48716
+    ## - mheight   1     66886 320791224 48717
+    ## - menarche  1    111679 320836018 48717
+    ## - ppwt      1    131132 320855470 48718
+    ## <none>                  320724338 48718
+    ## - fincome   1    193454 320917792 48718
+    ## - parity    1    413584 321137922 48721
+    ## - mrace     3    868321 321592659 48724
+    ## - babysex   1    853796 321578134 48727
+    ## - gaweeks   1   4611823 325336161 48778
+    ## - smoken    1   5076393 325800732 48784
+    ## - delwt     1   8008891 328733230 48823
+    ## - blength   1 102050296 422774634 49915
+    ## - bhead     1 106535716 427260054 49961
+    ## 
+    ## Step:  AIC=48711.51
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + gaweeks + 
+    ##     malform + menarche + mheight + momage + mrace + parity + 
+    ##     ppbmi + ppwt + smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - malform   1      1447 320850151 48710
+    ## - ppbmi     1      6975 320855679 48710
+    ## - momage    1     28379 320877083 48710
+    ## - mheight   1     69502 320918206 48710
+    ## - menarche  1    115708 320964411 48711
+    ## - ppwt      1    133961 320982665 48711
+    ## <none>                  320848704 48712
+    ## - fincome   1    194405 321043108 48712
+    ## - parity    1    414687 321263390 48715
+    ## - babysex   1    852133 321700837 48721
+    ## - gaweeks   1   4625208 325473911 48772
+    ## - smoken    1   5036389 325885093 48777
+    ## - delwt     1   8013099 328861802 48817
+    ## - mrace     3  13540415 334389119 48885
+    ## - blength   1 101995688 422844392 49908
+    ## - bhead     1 106662962 427511666 49956
+    ## 
+    ## Step:  AIC=48709.53
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + gaweeks + 
+    ##     menarche + mheight + momage + mrace + parity + ppbmi + ppwt + 
+    ##     smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - ppbmi     1      6928 320857079 48708
+    ## - momage    1     28660 320878811 48708
+    ## - mheight   1     69320 320919470 48708
+    ## - menarche  1    116027 320966177 48709
+    ## - ppwt      1    133894 320984044 48709
+    ## <none>                  320850151 48710
+    ## - fincome   1    193784 321043934 48710
+    ## - parity    1    414482 321264633 48713
+    ## - babysex   1    851279 321701430 48719
+    ## - gaweeks   1   4624003 325474154 48770
+    ## - smoken    1   5035195 325885346 48775
+    ## - delwt     1   8029079 328879230 48815
+    ## - mrace     3  13553320 334403471 48883
+    ## - blength   1 102009225 422859375 49906
+    ## - bhead     1 106675331 427525481 49954
+    ## 
+    ## Step:  AIC=48707.63
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + gaweeks + 
+    ##     menarche + mheight + momage + mrace + parity + ppwt + smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - momage    1     29211 320886290 48706
+    ## - menarche  1    117635 320974714 48707
+    ## <none>                  320857079 48708
+    ## - fincome   1    195199 321052278 48708
+    ## - parity    1    412984 321270064 48711
+    ## - babysex   1    850020 321707099 48717
+    ## - mheight   1   1078673 321935752 48720
+    ## - ppwt      1   2934023 323791103 48745
+    ## - gaweeks   1   4621504 325478583 48768
+    ## - smoken    1   5039368 325896447 48773
+    ## - delwt     1   8024939 328882018 48813
+    ## - mrace     3  13551444 334408523 48881
+    ## - blength   1 102018559 422875638 49904
+    ## - bhead     1 106821342 427678421 49953
+    ## 
+    ## Step:  AIC=48706.02
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + gaweeks + 
+    ##     menarche + mheight + mrace + parity + ppwt + smoken
+    ## 
+    ##            Df Sum of Sq       RSS   AIC
+    ## - menarche  1    100121 320986412 48705
+    ## <none>                  320886290 48706
+    ## - fincome   1    240800 321127090 48707
+    ## - parity    1    431433 321317724 48710
+    ## - babysex   1    841278 321727568 48715
+    ## - mheight   1   1076739 321963029 48719
+    ## - ppwt      1   2913653 323799943 48743
+    ## - gaweeks   1   4676469 325562760 48767
+    ## - smoken    1   5045104 325931394 48772
+    ## - delwt     1   8000672 328886962 48811
+    ## - mrace     3  14667730 335554021 48894
+    ## - blength   1 101990556 422876847 49902
+    ## - bhead     1 106864308 427750598 49952
+    ## 
+    ## Step:  AIC=48705.38
+    ## bwt ~ babysex + bhead + blength + delwt + fincome + gaweeks + 
+    ##     mheight + mrace + parity + ppwt + smoken
+    ## 
+    ##           Df Sum of Sq       RSS   AIC
+    ## <none>                 320986412 48705
+    ## - fincome  1    245637 321232048 48707
+    ## - parity   1    422770 321409181 48709
+    ## - babysex  1    846134 321832545 48715
+    ## - mheight  1   1012240 321998651 48717
+    ## - ppwt     1   2907049 323893461 48743
+    ## - gaweeks  1   4662501 325648912 48766
+    ## - smoken   1   5073849 326060260 48771
+    ## - delwt    1   8137459 329123871 48812
+    ## - mrace    3  14683609 335670021 48894
+    ## - blength  1 102191779 423178191 49903
+    ## - bhead    1 106779754 427766166 49950
+
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ babysex + bhead + blength + delwt + fincome + 
+    ##     gaweeks + mheight + mrace + parity + ppwt + smoken, data = birthweight)
+    ## 
+    ## Coefficients:
+    ## (Intercept)     babysex2        bhead      blength        delwt      fincome  
+    ##   -6098.822       28.558      130.777       74.947        4.107        0.318  
+    ##     gaweeks      mheight       mrace2       mrace3       mrace4       parity  
+    ##      11.592        6.594     -138.792      -74.887     -100.678       96.305  
+    ##        ppwt       smoken  
+    ##      -2.676       -4.843
+
+``` r
+model_1 = lm(bwt ~ babysex + bhead + blength + delwt + fincome + 
+    gaweeks + mheight + mrace + parity + ppwt + smoken, data = birthweight)
 
 birthweight %>% 
   add_predictions(model_1) %>% 
@@ -116,15 +266,9 @@ birthweight %>%
   geom_smooth(se = F, color = "red", method = "lm")
 ```
 
-    ## Warning in predict.lm(model, data): prediction from a rank-deficient fit may be
-    ## misleading
-
-    ## Warning in predict.lm(model, data): prediction from a rank-deficient fit may be
-    ## misleading
-
     ## `geom_smooth()` using formula 'y ~ x'
 
-<img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
+<img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
 
 ``` r
 model_2 = lm(bwt ~ blength + gaweeks, data = birthweight)
@@ -138,7 +282,8 @@ Use cross validation to compare:
 ``` r
 cv_df = crossv_mc(birthweight, 100) %>% 
   mutate(
-    model_1 = map(train, ~lm(bwt ~ fincome + gaweeks + ppbmi + pnumlbw + pnumsga, data = .x)),
+    model_1 = map(train, ~lm(bwt ~ babysex + bhead + blength + delwt + fincome + 
+    gaweeks + mheight + mrace + parity + ppwt + smoken, data = .x)),
     model_2 = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
     model_3 = map(train, ~lm(bwt ~ bhead + blength + babysex + 
                bhead * blength + bhead * babysex + blength * babysex + 
@@ -160,10 +305,9 @@ cv_df %>%
   ggplot(aes(x = model, y = rmse)) + geom_boxplot()
 ```
 
-<img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
+<img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
 
-The third model has the smallest value of RMSE while the model I
-proposed has the largest. (Sadly my model is the least optimal one)
+My regression model has the smallest value of RMSE among the three.
 
 ## Problem 2
 
@@ -229,7 +373,7 @@ boot_strap_results %>%
   theme(plot.title = element_text(hjust = 0.5))
 ```
 
-<img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
+<img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
 
 The distribution of R-squared approximately follows a normal
 distribution, with a center around 0.91. The 95% confidence interval for
@@ -260,7 +404,7 @@ boot_strap_results_2 %>%
   geom_density()
 ```
 
-<img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
+<img src="p8105_hw6_az2587_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
 
 The log function plot generally follows a normal distribution, with a
 center around 2.02. The confidence interval of the log function is
